Layout bug date buttons

--- a/src/css/fixtures.css
+++ b/src/css/fixtures.css
@@ -69,7 +69,7 @@
 }
 
 .fixtures .dateSelectNav {
-  text-align: center;
+  //text-align: center;
   margin: 10px;
 }
 
